fix: more links

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -76,7 +76,7 @@ div#collapsibleNavbar .navbar-toggler-icon {
 
 .header {
   /* background image */
-  background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3) ), url("/../assets/images/crimson-sky.jpg");
+  background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3) ), url("/michaeldemar.co-v1/assets/images/crimson-sky.jpg");
   //background-image: url(/../assets/images/crimson-sky.jpg);
   background-position: center;
   background-repeat: no-repeat;
