--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 
   <img
     class="logo"
-    src="{{ site.baseUrl }}/assets/images/mjd-logo-final-large-01.png"
+    src="{{ site.baseurl }}/assets/images/mjd-logo-final-large-01.png"
     alt="Personal logo"
     width="175px"
     height="175px"
