--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="{{ site.baseUrl }}/assets/css/styles.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
     <link
       rel="shortcut icon"
       type="image/png"
-      href="{{ site.baseUrl }}/assets/images/mjd-logo-final-large-01.png"
+      href="{{ site.baseurl }}/assets/images/mjd-logo-final-large-01.png"
     />
     <link
       rel="stylesheet"
@@ -59,11 +59,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
   <script
     type="text/javascript"
-    src="{{ site.baseUrl }}/assets/js/instafeed.min.js"
+    src="{{ site.baseurl }}/assets/js/instafeed.min.js"
   ></script>
   <script
     type="text/javascript"
-    src="{{ site.baseUrl }}/assets/js/custom.js"
+    src="{{ site.baseurl }}/assets/js/custom.js"
   ></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </html>
