--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,12 +3,12 @@
 
   <p class="bio">
     You may have stumbled across this site looking for a blog. Look
-    <a href="{{ site.baseUrl }}/blog.html">no further</a>. It's a mix of current
+    <a href="{{ site.baseurl }}/blog.html">no further</a>. It's a mix of current
     events, technology, and even poetry. New post every Friday.
   </p>
 
   <div style="text-align: center; margin-bottom: 25px">
-    <a class="btn btn-primary" href="{{ site.baseUrl }}/blog.html" role="button"
+    <a class="btn btn-primary" href="{{ site.baseurl }}/blog.html" role="button"
       >My blog</a
     >
   </div>
