--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 <p>
   {{ page.date | date_to_string }} {% assign author = site.authors | where:
   'short_name', page.author | first %} {% if author %} -
-  <a href="{{ site.baseUrl }}/{{ author.url }}">{{ author.name }}</a>
+  <a href="{{ site.baseurl }}/{{ author.url }}">{{ author.name }}</a>
   {% endif %}
 </p>
 
